<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_restaurante"
            android:contentDescription="@string/txt_logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/btn_primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:paddingVertical="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in_facebook"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_facebook"
            android:backgroundTint="@color/btn_facebook"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in_google"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_personal"
            android:backgroundTint="@color/btn_google"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_dont_have_an_account"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:paddingVertical="10dp"/>
    </LinearLayout>

</LinearLayout>